De naam van de bank met de effectenportefeuille is nu variabel, niet meer hard gecodeerd ("AsnBank").

--- a/FinancieelExpert2.fsproj
+++ b/FinancieelExpert2.fsproj
@@ -6,10 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="XmlBestanden\FundInfoAsnBank.xml" />
     <Compile Include="HuidigeWaarde.fs" />
     <Compile Include="ToekomstigeWaarde.fs" />
     <Compile Include="Effectenportefeuille.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
+
+  <ItemGroup />
 </Project>
 
