Andere opzet van XML-bestand. De naam van de aanbieder staat nu in de Provider tag per fonds. Code daarop aangepast.

--- a/FinancieelExpert2.fsproj
+++ b/FinancieelExpert2.fsproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="XmlBestanden\FundInfoAsnBank.xml" />
+    <Content Include="XmlBestanden\FundInfoAlleBanken.xml" />
     <Compile Include="HuidigeWaarde.fs" />
     <Compile Include="ToekomstigeWaarde.fs" />
     <Compile Include="Effectenportefeuille.fs" />
