--- a/FsFinancieelExpert.fsproj
+++ b/FsFinancieelExpert.fsproj
@@ -17,5 +17,9 @@
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.42.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="FsFinancieelRekenen\FsFinancieelRekenen.fsproj" />
+  </ItemGroup>
 </Project>
 
