--- a/FsFinancieelExpert.Test/FsFinancieelExpert.Test.fsproj
+++ b/FsFinancieelExpert.Test/FsFinancieelExpert.Test.fsproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Library.fs" />
+    <Compile Include="RekenTests.fs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -15,6 +15,17 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+    <PackageReference Include="FsCheck.Xunit" Version="3.3.1" />
+  </ItemGroup>
+
+  <PropertyGroup>
+    <GenerateProgramFile>false</GenerateProgramFile>
+  </PropertyGroup>
+
+
+  <ItemGroup>
+    <ProjectReference Include="..\FsFinancieelRekenen\FsFinancieelRekenen.fsproj" />
   </ItemGroup>
 
 </Project>
