--- a/FsFinancieelExpert.fsproj
+++ b/FsFinancieelExpert.fsproj
@@ -33,6 +33,7 @@
 
   <ItemGroup>
     <ProjectReference Include="FsFinancieelRekenen\FsFinancieelRekenen.fsproj" />
+    <ProjectReference Include="FundInfoXml\XmlFundLoader.fsproj" />
   </ItemGroup>
 </Project>
 
