--- a/FsFinancieelExpert.Test/FsFinancieelExpert.Test.fsproj
+++ b/FsFinancieelExpert.Test/FsFinancieelExpert.Test.fsproj
@@ -6,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="RekenTests.fs" />
+    <Compile Include="PortefeuilleTests.fs" />
+    <Compile Include="FinancieelRekenenTests.fs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -15,8 +16,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
-    <PackageReference Include="FsCheck.Xunit" Version="3.3.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
+    <PackageReference Include="FsCheck.Xunit" Version="3.3.2" />
   </ItemGroup>
 
   <PropertyGroup>
@@ -26,6 +27,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FsFinancieelRekenen\FsFinancieelRekenen.fsproj" />
+    <ProjectReference Include="..\FundInfoXml\XmlFundLoader.fsproj" />
   </ItemGroup>
 
 </Project>
